--- a/chat-web-app-try1/client/src/components/rightbar/rightbar.css
+++ b/chat-web-app-try1/client/src/components/rightbar/rightbar.css
@@ -1,5 +1,17 @@
 
 .rightbar{
-flex:4;
+flex:3;
+margin-left: 20px;
+
+}
+
+.rightbarTitle{
+  margin: 20px 0;
+}
+
+.rightbarFriendList{
+  padding : 0;
+  margin:0;
+  list-style: none;
 
 }
