--- a/chat-web-app-try1/client/src/components/topbar/topbar.css
+++ b/chat-web-app-try1/client/src/components/topbar/topbar.css
@@ -84,7 +84,12 @@
     justify-content: center;
     font-size:12px;
 }
-
+.uname{
+  text-decoration: none;
+  align-self: flex-start;
+  font-size:18px;
+  font-weight: 700;
+}
 
 .topbarImg{
   background: green;
